--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/4f2459a64d.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>YumBite Foods</title>
 </head>
 <body>
+    <h1 class="font-bold text-8xl text-orange-400 text-center">Hello Keegan !!</h1>
     <div id="root">
         Not rendered
     </div>
