--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>YumBite Foods</title>
 </head>
 <body>
-    <h1 class="font-bold text-xl text-orange-400 text-center">Hello Keegan !!</h1>
+    <!-- <h1 class="font-bold text-xl text-orange-400 text-center">Hello Keegan !!</h1> -->
     <div id="root">
         Not rendered
     </div>
