Handling State Management using redux-toolkit

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
 <body>
     <!-- <h1 class="font-bold text-xl text-orange-400 text-center">Hello Keegan !!</h1> -->
-    <div id="root">
-        Not rendered
-    </div>
+    <div id="root"> </div>
 
     <script type="module" src="./src/App.js"></script>
 </body>
