--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/4f2459a64d.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>YumBite Foods</title>
+    <title>YumBites Food</title>
 </head>
 
 <body>
