Responsive Design Layout :Using Tailwind Css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="index.css">
+    <link href="./style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4f2459a64d.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <title>YumBites Food</title>
 </head>
 
