--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="style.css"> -->
+    <meta name="description" content="Welcome to YumBites Food! Discover a wide range of delicious cuisines and convenient food delivery services.Order Yummy Food Online Now!!">
+    <meta name="keywords" content="YumBites Food, food delivery, delicious cuisines, convenience, restaurant in goa, ordering food online in goa">
+    <meta name="author" content="Keegan Colaco">
     <link rel="stylesheet" href="index.css">
     <link href="./style.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/img/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/4f2459a64d.js" crossorigin="anonymous"></script>
     <title>YumBites Food</title>
 </head>
